--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@ p {
 .first-card:hover {
   opacity: 1;
   animation: none;
-  background-image: url("./assets/img/joker.jpg");
+  background-image: url("assets/img/joker.jpg");
   background-size: cover;
   transition: 0.7s ease;
 }
@@ -221,7 +221,7 @@ p {
   height: 450px;
   padding: 16px;
   border-radius: 8px;
-  background-image: url("./assets/img/3d.jpg");
+  background-image: url("assets/img/3d.jpg");
   background-size: cover;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -245,7 +245,7 @@ p {
   height: 450px;
   padding: 16px;
   border-radius: 8px;
-  background-image: url("./assets/img/twoface.jpg");
+  background-image: url("assets/img/twoface.jpg");
   background-size: cover;
   position: relative;
   cursor: pointer;
@@ -368,7 +368,7 @@ p {
   position: relative;
   cursor: pointer;
   pointer-events: all;
-  background-image: url("./assets/img/sunset.jpg");
+  background-image: url("assets/img/sunset.jpg");
   background-size: cover;
 }
 
