--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -678,8 +678,22 @@ h1 {
   position: relative;
   cursor: pointer;
   pointer-events: all;
-  background-image: url("../img/sunset.jpg");
-  background-size: cover;
+  background-color: rgb(39, 160, 56);
+}
+
+.eight-card img {
+  width: 90%;
+  height: 90%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 1.3em;
+  border-radius: 8px;
+}
+
+.eight-card:hover img {
+  width: 90%;
+  height: 75%;
+  transition: 0.3s;
 }
 
 .eight-card::before {
@@ -687,49 +701,54 @@ h1 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
+  width: 100%;
   height: 100%;
-  border-radius: 4px 0 0 4px;
-  background-image: linear-gradient(45deg, #ffeb3b, #e91e63);
+  border-radius: 8px;
+  background-color: rgb(39, 160, 56);
+  opacity: 0;
 }
 
 .eight-card::after {
   content: "";
   position: absolute;
   top: 0;
-  left: 50%;
-  width: 50%;
+  left: 0;
+  width: 100%;
   height: 100%;
-  border-radius: 0 4px 4px 0;
-  background-image: linear-gradient(-45deg, #ffeb3b, #e91e63);
+  border-radius: 8px;
+  background-color: rgb(39, 160, 56);
+  opacity: 0;
 }
 
 .eight-card:hover::before {
-  transform: translateX(-150px);
-  opacity: 0;
-  transition: 1.2s;
+  transform: rotate(20deg);
+  transition: 0.3s;
   pointer-events: none;
+  z-index: -2;
+  opacity: 1;
 }
 
 .eight-card:hover::after {
-  transform: translateX(150px);
-  transition: 1.2s;
-  opacity: 0;
+  transform: rotate(10deg);
+  transition: 0.3s;
   pointer-events: none;
+  z-index: -1;
+  opacity: 1;
 }
 
 .eight-card-title {
   position: absolute;
-  z-index: 1;
   color: white;
-  font-size: 32px;
-  top: 45%;
-  left: 21%;
+  font-size: 40px;
+  top: 82%;
+  left: 35%;
   pointer-events: none;
+  opacity: 0;
+  text-shadow: 2px -2px black;
 }
 
 .eight-card:hover .eight-card-title {
-  opacity: 0;
+  opacity: 1;
   transition: 0.6s;
 }
 
