--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 body {
   background-color: #212534;
   width: 1400px;
-  margin: 0 auto;
+  margin: 5em auto;
   overflow-x: hidden;
   flex-wrap: wrap;
 }
@@ -19,7 +19,6 @@ h1 {
   color: white;
   text-align: center;
   font-size: 48px;
-  margin-top: 2em;
 }
 
 .row {
